# gpcache

./: .gitignore  CMakeLists.txt  DelegateOnSyscall.cpp  OnSyscall.h  PtraceProcess.cpp  PtraceProcess.h  README.md  SyscallDelegator.cpp  SyscallDelegator.h  SyscallEvent.h  SyscallEventCreator.cpp  SyscallEventCreator.h  SyscallMap.h  SyscallWrappers.h  backend_file.h  conanfile.py  debugger.h  enumerate.h  execute_action.cpp  execute_action.h  execute_cached_syscall.cpp  execute_cached_syscall.h  execution.cpp  execution.h  gpcache.cpp  inputs.h  logging.cpp  logging.h  main.cpp  outputs.h  state.h  syscall_decoder.cpp  syscall_decoder.h  syscall_params.cpp  syscall_params.h  syscall_params_generated.inc.h
.github/workflows/: build.yaml
backend/: file.cpp  file.h
backends/: README.md  file.cpp  file.h
cached_syscalls/: access.cpp  access.h  fstat.cpp  fstat.h  mmap_munmap.cpp  mmap_munmap.h  open.cpp  open_close.cpp  open_close.h  read.cpp  read.h  write.cpp  write.h
code_generator/: generate_syscalls.py
cpp_version/: CMakeLists.txt  backend_file.h  execution.cpp  execution.h  gpcache.cpp  inputs.h
cpp_version/backend/: file.cpp  file.h
cpp_version/old_obsolete/: OnSyscall.h  SyscallEvent.h
cpp_version/utils/: README.md
main/: cache_executed_syscall.cpp  cache_executed_syscall.h  execute_cached_syscall.cpp  execute_cached_syscall.h  inputs.h  state.cpp  state.h
old_obsolete/: DelegateOnSyscall.cpp  OnSyscall.h  SyscallEvent.h  SyscallEventCreator.cpp  SyscallEventCreator.h
python_version/: backend_file.py  gpcache.py
syscalls/: access.cpp  access.h  close.cpp  close.h  fstat.cpp  fstat.h  mmap_munmap.cpp  mmap_munmap.h  open.cpp  open.h  read.cpp  read.h  write.cpp  write.h
tests/: test1.cpp  test2.cpp
utils/: README.md  Utils.h  enumerate.h  flag_to_string.cpp  flag_to_string.h  join.h  stacktrace.cpp  stacktrace.h
wrapper/: Posix.cpp  Posix.h  Strace.cpp  Strace.h
wrapper/strace/: LICENSE.md  README.md
wrappers/: README.md  filesystem.h  hash.cpp  hash.h  json.h  posix.cpp  posix.h  ptrace.cpp  ptrace.h
wrappers/ptrace/: SyscallMap.cpp  SyscallWrappers.h
wrappers/ptrace_linux_x64/: SyscallMap.cpp  SyscallMap.h
